[gd_scene load_steps=12 format=3 uid="uid://3xq5semxvhdj"]

[ext_resource type="Texture2D" uid="uid://bdw4kqayn1xa6" path="res://assets/kenney_pixel-ui-pack/9-Slice/space.png" id="1_0mgyy"]
[ext_resource type="FontFile" uid="uid://ccvk0qw2cv67s" path="res://fonts/Volt5x5.ttf" id="1_mff3o"]
[ext_resource type="Script" path="res://scripts/dev.gd" id="1_rqivt"]
[ext_resource type="Texture2D" uid="uid://cdnd5nd6wgibp" path="res://assets/kenney_pixel-ui-pack/9-Slice/Colored/blue_pressed.png" id="2_xjd5s"]
[ext_resource type="AudioStream" uid="uid://denfwm7kr0aos" path="res://sounds/button press.mp3" id="5_c51ai"]
[ext_resource type="FontFile" uid="uid://dsi7o2aoknly3" path="res://fonts/pixelfy/Pixelfy.ttf" id="6_8mkq1"]
[ext_resource type="AudioStream" uid="uid://dl20i40fpokts" path="res://sounds/game_lobby_music.mp3" id="7_xxrsp"]
[ext_resource type="Texture2D" uid="uid://calg1svdjhe8o" path="res://assets/kenney_pixel-ui-pack/9-Slice/Ancient/tan.png" id="8_j0jkq"]
[ext_resource type="Texture2D" uid="uid://c4bpfh6vdxc2j" path="res://assets/kenney_pixel-ui-pack/9-Slice/Ancient/tan_pressed.png" id="9_mp7lb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvfoo"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8vnq"]
size = Vector2(50, 50)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqivt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.843137, 0.905882, 0.513726, 1)

[node name="menu" type="TouchScreenButton" parent="ColorRect"]
modulate = Color(1, 1, 1, 0.372549)
position = Vector2(56, 64)
scale = Vector2(4.5, 2.16667)
texture_normal = ExtResource("1_0mgyy")
texture_pressed = ExtResource("2_xjd5s")
shape = SubResource("RectangleShape2D_pvfoo")

[node name="menu2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 225.0
offset_bottom = 147.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 90
text = "menu"

[node name="dev" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 712.0
offset_right = 905.0
offset_bottom = 834.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 120
text = "Dev is trying his best :>"

[node name="dev2" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 800.0
offset_right = 1097.0
offset_bottom = 922.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 120
text = "coming soon !"

[node name="dev3" type="Label" parent="."]
modulate = Color(0.898039, 0.113725, 0, 1)
layout_mode = 0
offset_left = 256.0
offset_top = 800.0
offset_right = 1089.0
offset_bottom = 922.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 120
text = "coming soon !"

[node name="button Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c51ai")
autoplay = true

[node name="stay" type="Label" parent="."]
modulate = Color(0.815686, 0.482353, 0.352941, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 944.0
offset_right = 1116.0
offset_bottom = 1140.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 95
text = "! The Game is still in development !"

[node name="stay2" type="Label" parent="."]
modulate = Color(1, 0.737255, 0.203922, 1)
layout_mode = 0
offset_left = 200.0
offset_top = 1056.0
offset_right = 1045.0
offset_bottom = 1222.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8mkq1")
theme_override_font_sizes/font_size = 80
text = "! stay tuned !"

[node name="backaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xxrsp")

[node name="on" type="TouchScreenButton" parent="."]
z_index = 2
position = Vector2(440, 360)
scale = Vector2(3.33333, 2.66667)
texture_normal = ExtResource("1_0mgyy")
texture_pressed = ExtResource("8_j0jkq")
shape = SubResource("RectangleShape2D_g8vnq")

[node name="musicon" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 496.0
offset_top = 376.0
offset_right = 609.0
offset_bottom = 459.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 90
text = "on"

[node name="off" type="TouchScreenButton" parent="."]
z_index = 2
position = Vector2(672, 360)
scale = Vector2(3.33333, 2.66667)
texture_normal = ExtResource("1_0mgyy")
texture_pressed = ExtResource("9_mp7lb")
shape = SubResource("RectangleShape2D_g8vnq")

[node name="musicoff" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 720.0
offset_top = 384.0
offset_right = 833.0
offset_bottom = 467.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 90
text = "off
"

[node name="music" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 128.0
offset_top = 384.0
offset_right = 242.0
offset_bottom = 467.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mff3o")
theme_override_font_sizes/font_size = 90
text = "Music"

[node name="orange" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 320.0
offset_right = 856.0
offset_bottom = 544.0
color = Color(0.862745, 0.364706, 0.145098, 1)

[connection signal="released" from="ColorRect/menu" to="." method="_on_menu_released"]
[connection signal="released" from="on" to="." method="_on_on_released"]
[connection signal="released" from="off" to="." method="_on_off_released"]
